--- a/index.html
+++ b/index.html
@@ -4,68 +4,65 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <img src="./BhavnishImage1-modified.png" alt="Bhavnish Bhardwaj profile" />
-    <h1>Bhavnish Bhardwaj</h1>
-    <p>
-      <em><strong>Computer Science</strong> Student</em>
+    <h1 class="name">Bhavnish Bhardwaj</h1>
+    <p class="designation">
+      <em><strong>Computer Science</strong></em> Student
     </p>
-    <p>
-      I'm a Computer Science Student in
-      <a href="https://www.rtu.ac.in/">Rajasthan Technological University</a> at
+    <p class="first-para">
+      I'm a Computer Science Student in Rajasthan Technological University at
       there i'm Studying computer science core subjects as well programming
       languages. I'm pursuing here Masters in Computer Applications previously
       done Bachlour's in Applications. Nowadays I'm Looking for a Full Stack
       Development Role i've preety knowledge about various Programming languages
-      like Java etc. I'm comfortable in Web Development and Android Development.
+      like Java etc. I'm comfortable in Web Development.
     </p>
-    <hr />
+
     <h2>Education</h2>
-    <ul>
-      <li>
-        <a href="https://www.rtu.ac.in/">Rajasthan Technological University</a>
-      </li>
-      <p>Master's In Computer Applications</p>
-      <li><a href="https://www.uniraj.ac.in/">Rajasthan University</a></li>
-      <p>Bachlour's in Computer Applications</p>
-    </ul>
-    <hr />
+    <div class="education">
+      <a target="_blank" href="https://www.rtu.ac.in/"
+        ><h3>Rajasthan Technological University</h3></a
+      >
+      <p class="mca">Master's In Computer Applications</p>
+      <a target="_blank" href="https://www.uniraj.ac.in/"
+        ><h3>Rajasthan University</h3></a
+      >
+      <p class="bca">Bachlour's in Computer Applications</p>
+    </div>
+
     <h2>Certification's</h2>
-    <table>
-      <tr>
-        <td>Udemy's Data Structures and Algorithms certification</td>
-      </tr>
-      <tr>
-        <td>Udemy's Master in Java programming language certification</td>
-      </tr>
-    </table>
-    <hr />
-    <h2>Programming Languages</h2>
-    <em>C,&nbsp;C++,&nbsp;Java,&nbsp;Python,&nbsp;,JavaScript</em>
+    <p class="certification">
+      Data Structures and Algorithms certification<sub>Udemy</sub> <br />
+      Master in Java programming language certification<sub>Udemy</sub>
+    </p>
+
+    <!-- Languages  -->
+    <h2>Technical Skills</h2>
+    <p class="languages-1">Java, Python, JavaScript, C/C++</p>
     <br />
-    <hr />
+
     <h3>Frontend Technologies</h3>
-    <em
-      >ReactJs,&nbsp;Redux,&nbsp;NextJs,&nbsp;HTML,&nbsp;CSS,&nbsp;React
-      Native,&nbsp;Bootstrap</em
-    >
+    <p class="languages-2">
+      HTML, CSS, ReactJs, Redux, NextJs, React Native, Bootstrap
+    </p>
     <br />
-    <hr />
+
     <h3>Backend Technologies</h3>
-    <em
-      >NodeJs,&nbsp;ExpressJs,&nbsp;PostgreSQL,&nbsp;MongoDB,&nbsp;Firebase,&nbsp;AWS,&nbsp;Docker,&nbsp;Kubernetes</em
-    >
+    <p class="languages-3">
+      NodeJs, ExpressJs, PostgreSQL, MongoDB, Firebase, AWS, Docker, Kubernetes
+    </p>
     <br />
-    <hr />
+
     <h3>Other Tools and Technologies</h3>
-    <em
-      >TypeScript,&nbsp;Git,&nbsp;Postman,&nbsp;Linux,&nbsp;Scrum
-      Agile,&nbsp;Agora RTC</em
-    >
+    <p class="languages-4">
+      TypeScript, Git, Postman, Linux, Scrum Agile, Agora RTC
+    </p>
     <br />
-    <hr />
-    <a href="index2.html">Contact Me</a>
+
+    <a class="contact-me" target="_blank" href="index2.html">Contact Me</a>
   </body>
 </html>
