--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
     </p>
     <br />
 
-    <a class="contact-me" target="_blank" href="index2.html">Contact Me</a>
+    <a class="contact-me" target="_blank" href="contactMe.html">Contact Me</a>
   </body>
 </html>
